--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/sequelize": "^10.0.0",
     "clickhouse": "^2.6.0",
     "mongodb": "^6.3.0",
     "node-cron": "^3.0.3",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
